# prediction-market-analysis-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md
runtime/: .env.example  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
runtime/config/: sources.toml
runtime/src/polymarket_alert_bot/: __init__.py  cli.py  runtime_flow.py
runtime/src/polymarket_alert_bot/archive/: __init__.py  promote.py  writer.py
runtime/tests/: conftest.py
runtime/tests/fixtures/: clob_books.json  gamma_board.json  gamma_live_board.json  monitor_official_positions_raw.json  news_samples.json  polymarket_positions.json  real_hermes_monitor_output.json  x_samples.json
runtime/tests/integration/: test_calibration_report.py  test_callback_reconciliation.py  test_cli_dry_run.py  test_cli_operator_commands.py  test_monitor_pipeline.py  test_runtime_flow.py  test_scan_pipeline.py  test_service_endpoints.py  test_service_scheduler.py
runtime/tests/snapshots/: heartbeat.txt  monitor_alert.txt  research_digest.txt  strict_memo.txt
runtime/tests/unit/: test_archive_writer_and_promote.py  test_calibration_metrics.py  test_evidence_merge.py  test_family_summary.py  test_flow_seed_contract.py  test_gamma_client.py  test_judgment_contract.py  test_result_parser.py  test_runtime_flow_semantics.py  test_scan_ranking.py  test_semantic_relevance.py  test_settings.py  test_shortlist_retrieval.py  test_source_feed_loading.py  test_source_registry.py  test_storage_schema.py  test_template_rendering.py  test_trigger_defaults.py  test_trigger_lifecycle.py  test_ttl_expiry.py
(+105 files in other folders)
