[project]
name = "polymarket-alert-bot"
version = "0.1.0"
description = "Polymarket alert bot runtime"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
polymarket-alert-bot = "polymarket_alert_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

