[project]
name = "polymarket-alert-bot"
version = "0.1.0"
description = "Polymarket alert bot runtime"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
polymarket-alert-bot = "polymarket_alert_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
explicit_package_bases = true
warn_unused_ignores = true
